# vlcQt

./: CMakeLists.txt  vlcQtConfig.cmake.in
lib/: VLCQtCore.lib  VLCQtWidgets.lib
